<resources>
    <string name="app_name">ActivityLifeCycler</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="description"><![CDATA[find a team in your city & dominate the league]]></string>
    <string name="get_started">get started</string>
    <string name="desired_league">Desired League :</string>
    <string name="btn_mens">Mens</string>
    <string name="btn_womens">Womens</string>
    <string name="btn_coed">Co-ed</string>
    <string name="btn_next">Next</string>
    <string name="background_description">background</string>
    <string name="images_logo">app logo</string>
    <string name="i_am">I am a :</string>
    <string name="btn_finish">finish</string>
    <string name="btn_beginner">Beginner</string>
    <string name="brn_baller" />
    <string name="btn_baller">Baller</string>
    <string name="search_league">Looking for co-ed beginner league near you...</string>
</resources>
